--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
     "@svgr/rollup": "^8.1.0",
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "i18next": "^23.11.5",
     "jwt-decode": "^4.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-geolocated": "^4.1.2",
     "react-hook-form": "^7.52.1",
     "react-hook-mask": "^1.1.18",
     "react-i18next": "^14.1.2",
@@ -26,18 +28,22 @@
     "react-router-dom": "^6.24.1",
     "redux": "^5.0.1",
     "styled-reset": "^4.5.2",
+    "swiper": "^11.1.5",
     "ts-pattern": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.11",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint": "^8.57.0",
+    "eslint-plugin-jsonc": "^2.16.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "sass": "^1.77.7",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
