--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,8 @@
 {
   "files": [],
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"],
-      "@shared/*": ["src/shared/*"]
-    },
-    "types": ["vite-plugin-svgr/client"],
-
+    "types": ["vite-plugin-svgr/client", "jest", "node"]
   },
-
   "references": [
     { "path": "./tsconfig.node.json" },
     {
