--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-VITE_APP_URL=
-"https://run.mocky.io/v3/43382b97-f59b-4350-b30a-605993bf77fa"
+VITE_APP_URL="https://gnat-choice-morally.ngrok-free.app"
