--- a/package.json
+++ b/package.json
@@ -7,15 +7,11 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "preview": "vite preview",
-    "test": "jest",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "test": "jest"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
-    "@storybook/react": "^8.2.6",
     "@svgr/rollup": "^8.1.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
@@ -24,7 +20,6 @@
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-geolocated": "^4.1.2",
     "react-hook-form": "^7.52.1",
     "react-hook-mask": "^1.1.18",
     "react-i18next": "^14.1.2",
@@ -37,15 +32,6 @@
     "ts-pattern": "^5.2.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.6.1",
-    "@storybook/addon-essentials": "^8.2.6",
-    "@storybook/addon-interactions": "^8.2.6",
-    "@storybook/addon-links": "^8.2.6",
-    "@storybook/addon-onboarding": "^8.2.6",
-    "@storybook/blocks": "^8.2.6",
-    "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react-vite": "^8.2.6",
-    "@storybook/test": "^8.2.6",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/react-hooks": "^8.0.1",
@@ -63,11 +49,9 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.9",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
-    "eslint-plugin-storybook": "^0.8.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "sass": "^1.77.8",
-    "storybook": "^8.2.6",
+    "sass": "^1.77.7",
     "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
