--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,17 +22,7 @@
     "strict": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": false,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"],
-      "@shared/*": ["./src/shared/*"],
-      "@pages/*": ["./src/pages/*"],
-      "@entities/*": ["./src/entities/*"],
-      "@features/*": ["./src/features/*"],
-      "@widgets/*": ["./src/widgets/*"],
-      "@app/*": ["./src/app/*"]
-    }
+    "noFallthroughCasesInSwitch": false
   },
-  "include": ["src"]
+  "include": ["src", "src/entities/pet/ui/petCard.style.ts"]
 }
