--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,14 @@
 {
   "files": [],
   "compilerOptions": {
-    "types": ["vite-plugin-svgr/client", "jest", "node"]
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@shared/*": ["src/shared/*"]
+    },
+    "types": ["vite-plugin-svgr/client", "jest"]
   },
+
   "references": [
     { "path": "./tsconfig.node.json" },
     {
