--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "@/*": ["src/*"],
       "@shared/*": ["src/shared/*"]
     },
-    "types": ["vite-plugin-svgr/client", "jest"]
+    "types": ["vite-plugin-svgr/client"]
   },
 
   "references": [
